schluesselmomente/schluesselmomente-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: schluesselmomente-be
    app: schluesselmomente-be
  name: schluesselmomente-be
  namespace: schluesselmomente
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: schluesselmomente-be
      app: schluesselmomente-be
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: schluesselmomente-be
        app: schluesselmomente-be
    spec:
      containers:
        - image: ghcr.io/davidcode2/schluesselmomente-be:latest
          name: schluesselmomente-be
      restartPolicy: Always
