schluesselmomente/schluesselmomente-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: schluesselmomente-fe
  name: schluesselmomente-fe
  namespace: schluesselmomente
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: schluesselmomente-fe
      app: schluesselmomente-fe
  template:
    metadata:
      labels:
        io.kompose.service: schluesselmomente-fe
        app: schluesselmomente-fe
    spec:
      containers:
        - image: ghcr.io/davidcode2/schluesselmomente:1.0.6
          name: schluesselmomente
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
