schluesselmomente/schluesselmomente-nginx-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: schluesselmomente-nginx-proxy
  name: schluesselmomente-nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: schluesselmomente-nginx-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: schluesselmomente-nginx-proxy
    spec:
      containers:
        - image: schluesselmomente-nginx-proxy
          name: schluesselmomente-nginx-proxy
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: schluesselmomente-nginx-proxy-cm0
              readOnly: true
              subPath: nginx.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: schluesselmomente-nginx-proxy-cm0
          name: schluesselmomente-nginx-proxy-cm0
