schluesselmomente/schluesselmomente-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schluesselmomente-be-service
  namespace: schluesselmomente
spec:
  # This makes the service only reachable from within the cluster
  # The ingress controller will talk to it.
  type: ClusterIP
  ports:
    - name: http
      port: 80 # The port the service will be available on
      targetPort: 99 
  selector:
    # Check your deployment's spec.template.metadata.labels
    app: schluesselmomente-be
